/* Copyright 2019 Istio Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package wasm.common;

message Context {
  google.protobuf.Timestamp request_timestamp = 1;
  google.protobuf.Timestamp response_timestamp = 2;
  google.protobuf.Int64Value request_size = 3;
  google.protobuf.Int64Value response_size = 4;
  google.protobuf.Int64Value destination_port = 5;

  google.protobuf.StringValue request_protocol = 6;
  google.protobuf.Int64Value response_code = 7;
  google.protobuf.StringValue response_flag = 8;
  google.protobuf.StringValue destination_service_host = 9;
  google.protobuf.StringValue destination_service_name = 10;
  google.protobuf.StringValue request_operation = 11;
  google.protobuf.BoolValue mtls = 12;
  google.protobuf.StringValue source_principal = 13;
  google.protobuf.StringValue destination_principal = 14;
  google.protobuf.StringValue rbac_permissive_policy_id = 15;
  google.protobuf.StringValue rbac_permissive_engine_result = 16;
  google.protobuf.Duration duration = 17;
  google.protobuf.Duration response_duration = 18;
  google.protobuf.StringValue requested_server_name = 19;
  
  google.protobuf.Int64Value traffic_direction = 20;

  google.protobuf.StringValue referer = 21;
  google.protobuf.StringValue user_agent = 22;
  google.protobuf.StringValue url_path = 23;
  google.protobuf.StringValue url_host = 24;
  google.protobuf.StringValue url_scheme = 25;
  google.protobuf.StringValue request_id = 26;
  google.protobuf.StringValue b3_trace_id = 27;
  google.protobuf.StringValue b3_span_id = 28;
  google.protobuf.BoolValue b3_trace_sampled = 29;
};