syntax = "proto3";

package istio.src.envoy.extensions.wasm.opencensus;

import "google/api/distribution.proto";
import "google/api/monitored_resource.proto";
import "proxy_wasm_intrinsics.proto";

message MeasureSpec {
    string name = 1;

    enum Type {
        INT = 0;
        DOUBLE = 1;
    };
    Type type = 2;
}

message ViewSpec {
    string name = 1;

    enum Aggregation {
        Counter = 0;
        Gauge = 1;
        Distribution = 2;
    };
  
    Aggregation aggregation = 2;
  
    google.api.Distribution distribution = 3;

    repeated uint32 tags = 4;
}

message StackdriverExporterSpec {
    GrpcService grpc_service = 1;

    string metric_prefix = 2;

    map<string, google.api.MonitoredResource> per_metric_monitored_resources = 3;

    string project_id = 4;
}
